--- a/package.json
+++ b/package.json
@@ -4,15 +4,74 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "type": "module",
   "devDependencies": {
-    "@nx/js": "22.2.1",
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@eslint/js": "^9.8.0",
+    "@next/eslint-plugin-next": "^16.0.1",
+    "@nx/eslint": "22.2.5",
+    "@nx/eslint-plugin": "22.2.5",
+    "@nx/jest": "22.2.5",
+    "@nx/js": "22.2.5",
+    "@nx/next": "22.2.5",
+    "@nx/node": "22.2.5",
+    "@nx/react": "22.2.5",
+    "@nx/vite": "22.2.5",
+    "@nx/vitest": "22.2.5",
+    "@nx/web": "22.2.5",
+    "@org/foo-dto": "workspace:*",
+    "@org/foo-ui": "workspace:*",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "nx": "22.2.1",
-    "prettier": "^2.6.2",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/react": "16.3.0",
+    "@trivago/prettier-plugin-sort-imports": "^6.0.0",
+    "@types/jest": "^30.0.0",
+    "@types/node": "20.19.9",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^4.0.0",
+    "@vitest/ui": "^4.0.0",
+    "autoprefixer": "10.4.23",
+    "babel-jest": "^30.0.2",
+    "eslint": "^9.8.0",
+    "eslint-config-next": "^16.0.10",
+    "eslint-config-prettier": "^10.0.0",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "7.0.1",
+    "jest": "^30.0.2",
+    "jest-environment-jsdom": "^30.0.2",
+    "jest-util": "^30.0.2",
+    "jiti": "2.4.2",
+    "jsdom": "~22.1.0",
+    "jsonc-eslint-parser": "^2.4.2",
+    "nx": "22.2.5",
+    "postcss": "8.5.6",
+    "prettier": "^3.7.4",
+    "prettier-plugin-classnames": "^0.8.6",
+    "prettier-plugin-merge": "^0.8.0",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "tailwindcss": "4.1.18",
+    "ts-jest": "^29.4.0",
+    "ts-node": "10.9.2",
     "tslib": "^2.3.0",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.40.0",
+    "vite": "^7.0.0",
+    "vite-plugin-dts": "~4.5.0",
+    "vitest": "^4.0.0"
+  },
+  "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
+    "next": "~16.0.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
