--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,18 @@
   "extends": "./tsconfig.base.json",
   "compileOnSave": false,
   "files": [],
-  "references": []
+  "references": [
+    {
+      "path": "./apps/web"
+    },
+    {
+      "path": "./packages/foo/dto"
+    },
+    {
+      "path": "./packages/foo/ui"
+    },
+    {
+      "path": "./packages/foo/dal"
+    }
+  ]
 }
