--- a/packages/foo/dto/tsconfig.lib.json
+++ b/packages/foo/dto/tsconfig.lib.json
@@ -7,7 +7,7 @@
     "tsBuildInfoFile": "dist/tsconfig.lib.tsbuildinfo",
     "emitDeclarationOnly": false,
     "forceConsistentCasingInFileNames": true,
-    "types": ["node"],
+    "types": ["node"]
   },
   "include": ["src/**/*.ts"],
   "references": [],
@@ -23,6 +23,6 @@
     "src/**/*.test.js",
     "src/**/*.spec.js",
     "src/**/*.test.jsx",
-    "src/**/*.spec.jsx",
-  ],
+    "src/**/*.spec.jsx"
+  ]
 }
