--- a/package.json
+++ b/package.json
@@ -2,24 +2,25 @@
   "name": "@org/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "lint-all": "nx run-many -t lint --skip-nx-cache --outputStyle=static"
+  },
   "private": true,
-  "type": "module",
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
     "@next/eslint-plugin-next": "^16.0.1",
-    "@nx/eslint": "22.2.5",
-    "@nx/eslint-plugin": "22.2.5",
-    "@nx/jest": "22.2.5",
-    "@nx/js": "22.2.5",
-    "@nx/next": "22.2.5",
-    "@nx/node": "22.2.5",
-    "@nx/react": "22.2.5",
-    "@nx/vite": "22.2.5",
-    "@nx/vitest": "22.2.5",
-    "@nx/web": "22.2.5",
+    "@nx/eslint": "22.2.7",
+    "@nx/eslint-plugin": "22.2.7",
+    "@nx/jest": "22.2.7",
+    "@nx/js": "22.2.7",
+    "@nx/next": "22.2.7",
+    "@nx/node": "22.2.7",
+    "@nx/react": "22.2.7",
+    "@nx/vite": "22.2.7",
+    "@nx/vitest": "22.2.7",
+    "@nx/web": "22.2.7",
     "@org/foo-dto": "workspace:*",
     "@org/foo-ui": "workspace:*",
     "@swc-node/register": "~1.9.1",
@@ -52,7 +53,7 @@
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.4.2",
-    "nx": "22.2.5",
+    "nx": "22.2.7",
     "postcss": "8.5.6",
     "prettier": "^3.7.4",
     "prettier-plugin-classnames": "^0.8.6",
