--- a/packages/foo/dal/package.json
+++ b/packages/foo/dal/package.json
@@ -12,5 +12,8 @@
     },
     "./package.json": "./package.json"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "@org/foo-dto": "workspace:*"
+  }
 }
